// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkLoadingButton should add only bpk specific classes if className prop is set to empty string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "destructive" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--destructive"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "disabled" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    disabled=""
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "featured" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--featured"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "iconOnly" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--large-icon-only"
    type="button"
  >
    <span
      class="visually-hidden"
    >
      Search
    </span>
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "link" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--link"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "loading" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    disabled=""
    type="button"
  >
    My button 
    <svg
      class="bpk-spinner bpk-spinner--large bpk-spinner--dark bpk-spinner--align-to-large-button"
      height="24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 6.657a.946.946 0 0 1-.943-.943V1.943c0-.519.424-.943.943-.943.519 0 .943.424.943.943v3.771a.946.946 0 0 1-.943.943z"
        opacity=".65"
      />
      <path
        clip-rule="evenodd"
        d="M14.671 7.373a.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345c.45.26.604.839.345 1.288L15.96 7.028a.946.946 0 0 1-1.288.345z"
        opacity=".75"
      />
      <path
        clip-rule="evenodd"
        d="M16.627 9.329a.945.945 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345z"
        opacity=".85"
      />
      <path
        clip-rule="evenodd"
        d="M17.343 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943a.946.946 0 0 1-.943.943h-3.771a.946.946 0 0 1-.943-.943z"
        opacity=".9"
      />
      <path
        clip-rule="evenodd"
        d="M16.627 14.671a.946.946 0 0 1 1.288-.345l3.266 1.886c.45.26.604.839.345 1.288a.946.946 0 0 1-1.288.345l-3.266-1.886a.946.946 0 0 1-.345-1.288z"
        opacity=".2"
      />
      <path
        clip-rule="evenodd"
        d="M14.671 16.627a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288.945.945 0 0 1-1.288-.345l-1.886-3.266a.946.946 0 0 1 .345-1.288z"
        opacity=".25"
      />
      <path
        clip-rule="evenodd"
        d="M12 17.343c.519 0 .943.424.943.943v3.771A.946.946 0 0 1 12 23a.946.946 0 0 1-.943-.943v-3.771c0-.519.424-.943.943-.943z"
        opacity=".3"
      />
      <path
        clip-rule="evenodd"
        d="M9.329 16.627c.449.26.604.839.345 1.288l-1.886 3.266a.945.945 0 0 1-1.288.345.946.946 0 0 1-.345-1.288l1.886-3.266a.946.946 0 0 1 1.288-.345z"
        opacity=".35"
      />
      <path
        clip-rule="evenodd"
        d="M7.373 14.671a.946.946 0 0 1-.345 1.288l-3.266 1.886a.946.946 0 0 1-1.288-.345.946.946 0 0 1 .345-1.288l3.266-1.886a.946.946 0 0 1 1.288.345z"
        opacity=".4"
      />
      <path
        clip-rule="evenodd"
        d="M6.657 12a.946.946 0 0 1-.943.943H1.943A.946.946 0 0 1 1 12c0-.519.424-.943.943-.943h3.771c.519 0 .943.424.943.943z"
        opacity=".45"
      />
      <path
        clip-rule="evenodd"
        d="M7.373 9.329a.946.946 0 0 1-1.288.345L2.819 7.788A.946.946 0 0 1 2.474 6.5a.946.946 0 0 1 1.288-.345L7.028 8.04a.946.946 0 0 1 .345 1.288z"
        opacity=".5"
      />
      <path
        clip-rule="evenodd"
        d="M9.329 7.373a.946.946 0 0 1-1.288-.345L6.155 3.762A.946.946 0 0 1 6.5 2.474a.946.946 0 0 1 1.288.345l1.886 3.266a.946.946 0 0 1-.345 1.288z"
        opacity=".55"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with "large" and "secondary" attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "destructive" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--destructive"
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "featured" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-button"
    href="#"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "icon" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5zm2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconDisabled" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5zm2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconLoading" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1.5c-2.703 0-4.688 1.426-5.543 2.46C6.111 4.38 6 4.895 6 5.32v1.43a.75.75 0 0 1-.75.75H4.5a3 3 0 0 0-3 3v9a3 3 0 0 0 3 3h15a3 3 0 0 0 3-3v-9a3 3 0 0 0-3-3h-.75a.75.75 0 0 1-.75-.75V5.385c0-.514-.162-1.074-.555-1.5C16.547 2.914 14.693 1.5 12 1.5zm2.625 6h-5.25C9.168 7.5 9 7.276 9 7v-.583c0-.264.075-.52.23-.684C9.751 5.176 10.721 4.5 12 4.5c1.276 0 2.208.676 2.758 1.262.16.171.242.436.242.71V7c0 .276-.168.5-.375.5z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconOnly" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--icon-only"
    type="button"
  >
    <span
      class="visually-hidden"
    >
      Search
    </span>
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "iconPosition=leading" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--featured"
    type="button"
  >
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
     My button
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "link" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--link"
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "loading" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button"
    disabled=""
    type="button"
  >
    My button 
    <svg
      class="bpk-spinner bpk-spinner--dark bpk-spinner--align-to-button"
      height="18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="2"
        opacity=".45"
        rx="1"
        width="4"
        x="1"
        y="8"
      />
      <rect
        height="2"
        rx="1"
        width="4"
        x="13"
        y="8"
      />
      <rect
        height="2"
        opacity=".3"
        rx="1"
        transform="rotate(-90 8 17)"
        width="4"
        x="8"
        y="17"
      />
      <rect
        height="2"
        opacity=".65"
        rx="1"
        transform="rotate(-90 8 5)"
        width="4"
        x="8"
        y="5"
      />
      <rect
        height="2"
        opacity=".25"
        rx="1"
        transform="rotate(-120 12.134 16.428)"
        width="4"
        x="12.134"
        y="16.428"
      />
      <rect
        height="2"
        opacity=".55"
        rx="1"
        transform="rotate(-120 6.134 6.036)"
        width="4"
        x="6.134"
        y="6.036"
      />
      <rect
        height="2"
        opacity=".2"
        rx="1"
        transform="rotate(-150 15.428 13.866)"
        width="4"
        x="15.428"
        y="13.866"
      />
      <rect
        height="2"
        opacity=".5"
        rx="1"
        transform="rotate(-150 5.036 7.866)"
        width="4"
        x="5.036"
        y="7.866"
      />
      <rect
        height="2"
        opacity=".85"
        rx="1"
        transform="rotate(150 16.428 5.866)"
        width="4"
        x="16.428"
        y="5.866"
      />
      <rect
        height="2"
        opacity=".4"
        rx="1"
        transform="rotate(150 6.036 11.866)"
        width="4"
        x="6.036"
        y="11.866"
      />
      <rect
        height="2"
        opacity=".75"
        rx="1"
        transform="rotate(120 13.866 2.572)"
        width="4"
        x="13.866"
        y="2.572"
      />
      <rect
        height="2"
        opacity=".35"
        rx="1"
        transform="rotate(120 7.866 12.964)"
        width="4"
        x="7.866"
        y="12.964"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should render correctly with a "secondary" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--secondary"
    type="button"
  >
    My button 
    <span
      style="line-height: .5rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="8"
        style="width: .5rem; height: .5rem;"
        viewBox="0 0 16 16"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3 12a1.5 1.5 0 0 0 1.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 0 0 2.122 2.12l7.5-7.5a1.5 1.5 0 0 0 0-2.12l-7.5-7.5a1.5 1.5 0 0 0-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 0 0 3 12z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkLoadingButton should respect the class names entered as a string 1`] = `
<DocumentFragment>
  <button
    class="bpk-button bpk-button--large bpk-button--secondary custom-class-1 custom-class-2"
    type="button"
  >
    My button 
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        class="bpk-icon--rtl-support"
        height="16"
        style="width: 1rem; height: 1rem;"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.293 19.713a1 1 0 0 0 1.414 0l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.438 1.39l.024.024 5.293 5.293H5a1 1 0 0 0 0 2h11.586L11.293 18.3a1 1 0 0 0 0 1.414z"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
